# dynamischer-stromtarif

./: README.md  dynamischer-stromtarif.html  dynamischer-stromtarif.ipynb  pyproject.toml
.github/workflows/: gh-pages.yml
data/: 2025_messwerte_pseudonymisiert_3600s_interval.csv  verbrauch_2024.csv
src/: auew_allgaeustrom_basis.md  dynamischer-stromtarif-pv.ipynb  dynamischer-stromtarif.ipynb
